samples/_failures_safe/1761608268_dbb80e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49a5cbed.c: In function ‘main’:
./samples/SAFE/__tmp_49a5cbed.c:190:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  190 |     int choice
      |     ^~~
./samples/SAFE/__tmp_49a5cbed.c:190:5: error: expected declaration or statement at end of input
